apps/dev/docker-desktop/dev.infomed-stat.ru/ingress/uploaders-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploaders-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - dev.infomed-stat.ru
  #   secretName: https-secret
  rules:
  - host: dev.infomed-stat.ru
    http:
      paths:
      - pathType: Prefix
        path: /cgi-bin/avataruploader.cgi
        backend:
          service:
            name: uploaders-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin/companylogouploader.cgi
        backend:
          service:
            name: uploaders-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin/generalimageuploader.cgi
        backend:
          service:
            name: uploaders-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin/grouplogouploader.cgi
        backend:
          service:
            name: uploaders-service
            port:
              number: 80
      - pathType: Prefix
        path: /cgi-bin/imageuploader.cgi
        backend:
          service:
            name: uploaders-service
            port:
              number: 80
